Preliminary simulation setup and geometry fixes

--- a/resources/config/gentiane/geometry/0.1/manager.conf
+++ b/resources/config/gentiane/geometry/0.1/manager.conf
@@ -24,7 +24,7 @@ setup_description : string = "The Gentiane HPGe detector"
 ### factory.debug : boolean = 0
 
 #@description A list of files that contains the definition of geometry models
-factory.geom_files : string[17] as path  = \
+factory.geom_files : string[18] as path  = \
   "@edwgentiane:config/gentiane/geometry/0.1/models/Sample/sample.geom" \
   "@edwgentiane:config/gentiane/geometry/0.1/models/Sample/sample_box.geom" \
   "@edwgentiane:config/gentiane/geometry/0.1/models/Detector/top_copper_finger.geom" \
@@ -38,6 +38,7 @@ factory.geom_files : string[17] as path  = \
   "@edwgentiane:config/gentiane/geometry/0.1/models/Detector/internal_chamber.geom" \
   "@edwgentiane:config/gentiane/geometry/0.1/models/Detector/detector_alu_base.geom" \
   "@edwgentiane:config/gentiane/geometry/0.1/models/Detector/external_cover.geom" \
+  "@edwgentiane:config/gentiane/geometry/0.1/models/Detector/detector_envelope.geom" \
   "@edwgentiane:config/gentiane/geometry/0.1/models/Shielding/internal_lead_shield.geom" \
   "@edwgentiane:config/gentiane/geometry/0.1/models/Shielding/copper_shield_box.geom" \
   "@edwgentiane:config/gentiane/geometry/0.1/models/gentiane_assembly.geom" \
