--- a/resources/config/gentiane/simulation/geant4_control/0.1/hits/step_hit_processors.conf
+++ b/resources/config/gentiane/simulation/geant4_control/0.1/hits/step_hit_processors.conf
@@ -5,23 +5,24 @@
 #@key_label  "name"
 #@meta_label "type"
 
-##############################################################################
-[name="detector.hit_processor" type="mctools::calorimeter_step_hit_processor"]
 
-#@config The step hit processor for the calorimeter detection volume
+##########################################################################
+[name="HPGe.hit_processor" type="mctools::calorimeter_step_hit_processor"]
+
+#@config The step hit processor for the HPGe calorimeter detection volume
 
 ##################################
 # Basic configuration parameters #
 ##################################
 
 #@description The name of the sensitive MC hits the processor must process to fill the output hit category
-sensitive.category    : string = "detector_SD"
+sensitive.category    : string = "HPGe_SD"
 
 #@description The name of the category of MC hits output by this processor
-hit.category          : string = "calorimeter"
+hit.category          : string = "HPGe"
 
 #@description Flag to activate a preallocated buffer/pool of MC hits to optimize memory management
-use_private_pool      : boolean  = 1
+use_private_pool      : boolean  = true
 
 #@description Initial capacity of the buffer/pool of MC hits
 private_pool_capacity : integer  = 10
@@ -30,18 +31,18 @@ private_pool_capacity : integer  = 10
 # Parameters specific to the 'mctools::calorimeter_step_hit_processor' class #
 ##############################################################################
 
-#@description The name of the geometry category to be attached to the output MC hits
-mapping.category      : string = "detector.gc"
+#@description The name of the geometry category to be attached to the output MC hits to compute the proper GID
+mapping.category      : string = "hpge_crystal.gc"
 
 #@description The time spread of primary MC step hits to apply the clusterization
-cluster.time_range    : real as time  = 1.0 ns
+cluster.time_range    : real as time   = 1.0 ns
 
 #@description The spacial spread of primary MC step hits to apply the clusterization
-cluster.space_range   : real as length = 10.0 mm
+cluster.space_range   : real as length = 100.0 mm
 
 
-################################################################################
-[name="detector.visu.hit_processor" type="mctools::push_all_step_hit_processor"]
+############################################################################
+[name="HPGe.visu.hit_processor" type="mctools::push_all_step_hit_processor"]
 
 #@config The step hit processor for collecting all true hits in the detector volume for visualization
 
@@ -53,13 +54,13 @@ cluster.space_range   : real as length = 10.0 mm
 hit.category       : string  = "__visu.tracks"
 
 #@description The sensitive category
-sensitive.category : string  = "detector_SD"
+sensitive.category : string  = "HPGe_SD"
 
 
 ##############################################################################
-[name="source.visu.hit_processor" type="mctools::push_all_step_hit_processor"]
+[name="sample.visu.hit_processor" type="mctools::push_all_step_hit_processor"]
 
-#@config The step hit processor for collecting all hits in the source volume for visualization
+#@config The step hit processor for collecting all hits in the sample volume for visualization
 
 ##################################
 # Basic configuration parameters #
@@ -69,9 +70,10 @@ sensitive.category : string  = "detector_SD"
 hit.category       : string  = "__visu.tracks"
 
 #@description The sensitive category
-sensitive.category : string  = "__source_SD"
+sensitive.category : string  = "__sample_SD"
 
-#@description The list of materials of which some geometry volumes are made of and for which we want to record MC hits for visualization
-geometry.volumes.with_materials : string[1] = "source_material"
+#@description The list of volumes for which we want to record MC hits for visualization
+geometry.volumes : string[2] = "sample.model.log" "sample_box.model.log"
 
-# end
+
+# end of step_hit_processors.conf
