--- a/resources/config/gentiane/simulation/geant4_control/0.1/manager.conf
+++ b/resources/config/gentiane/simulation/geant4_control/0.1/manager.conf
@@ -12,15 +12,17 @@
 ######################################
 [name="manager"]
 
-#@description Geant4 simulation manager logging priority
-### logging.priority : string = "warning"
+### #@description Geant4 simulation manager logging priority
+### logging.priority : string = "fatal"
 
 ############
 # GEOMETRY #
 ############
 [name="geometry"]
 
-#@description Main configuration file for the geometry manager:
+#@config Configuration of the geometry manager
+
+#@description Main configuration file for the geometry manager (geomtools::manager)
 manager.config : string as path = \
   "@edwgentiane:config/gentiane/geometry/0.1/manager.conf"
 
@@ -31,7 +33,7 @@ manager.config : string as path = \
 
 #@config Configuration of the event generator manager
 
-#@description Configuration file for the embedded 'genbb::manager'
+#@description Configuration file for the embedded event generator manager (genbb::manager)
 manager.config : string as path = \
   "@edwgentiane:config/gentiane/simulation/primary_events/0.1/manager.conf"
 
@@ -40,7 +42,7 @@ manager.config : string as path = \
 #####################
 [name="vertex_generator"]
 
-#@description Main configuration file for the vertex generator manager
+#@description Main configuration file for the vertex generator manager (genvtx::manager)
 manager.config : string as path = \
   "@edwgentiane:config/gentiane/simulation/vertexes/0.1/manager.conf"
 
@@ -49,30 +51,37 @@ manager.config : string as path = \
 #########################
 [name="detector_construction"]
 
-#@config Main configuration file for the detector construction user object:
+#@config Parameters for the detector construction user object
 
 #@description Detector construction logging priority threshold
-logging.priority : string = "trace"
+logging.priority : string = "fatal"
 
           ##################
           # GDML interface #
           ##################
 
 #@description Temporary directory for GDML file generation:
-gdml.tmp_dir : string as path = "/tmp/mauger/mctools_g4.d"
+gdml.tmp_dir : string as path = "/tmp/${USER}/mctools_g4.d"
 
 #@description GDML schema location ("local" or "remote"):
 gdml.schema_location : string = "local"
 
-#@description Flag to do GDML validation
-### gdml.validation   : boolean = 1
+### #@description Flag to do GDML validation
+### gdml.validation : boolean = false
 
           ###################
           # Material plugin #
           ###################
 
-#@description The name of the materials geometry plugin (default: empty => autodetect)
-### materials.plugin_name : string = "materials_driver"
+# #@description The name of the materials geometry plugin (default: empty => autodetect)
+# materials.plugin_name : string = "materials_driver"
+
+          ##############################
+          # Hit Post-Processor Factory #
+          ##############################
+
+# The Post-Processor Factory provides a way to instantiate specific hit post-processing algorithm
+# adapted to some categories of hits.
 
 #@description Configuration file for the step hit processor factory:
 hit_processor_factory.config : string as path = "@edwgentiane:config/gentiane/simulation/geant4_control/0.1/hits/step_hit_processors.conf"
@@ -86,58 +95,61 @@ hit_processor_factory.config : string as path = "@edwgentiane:config/gentiane/si
 # models in the geometry configuration files.
 
 #@description List of sensitive detectors :
-sensitive.detectors : string[1] = "detector_SD"
+sensitive.detectors : string[1] = "HPGe_SD"
 
-                   ########################################################
-                   # Truth hits from the 'detector_SD' sensitive category #
-                   ########################################################
+                   ####################################################
+                   # Truth hits from the 'HPGe_SD' sensitive category #
+                   ####################################################
 
-#@description Debug flag for sensitive detector "detector_SD"
-sensitive.detector_SD.debug                            : boolean = 0
+#@description Debug flag for sensitive detector "HPGe_SD"
+sensitive.HPGe_SD.debug                            : boolean = false
 
-#@description Buffer capacity for hits (sensitive detector "detector_SD")
-sensitive.detector_SD.hits_buffer_capacity             : integer = 200
+#@description Buffer capacity for hits (sensitive detector "HPGe_SD")
+sensitive.HPGe_SD.hits_buffer_capacity             : integer = 200
 
-#@description Flag to activate the recording of alpha particle quenching (sensitive detector "detector_SD")
-sensitive.detector_SD.record_alpha_quenching           : boolean = 1
+#@description Flag to activate the recording of alpha particle quenching (sensitive detector "HPGe_SD")
+sensitive.HPGe_SD.record_alpha_quenching           : boolean = true
 
-#@description Flag to activate the recording of any track ID (sensitive detector "detector_SD")
-sensitive.detector_SD.record_track_id                  : boolean = 1
+#@description Flag to activate the recording of any track ID (sensitive detector "HPGe_SD")
+sensitive.HPGe_SD.record_track_id                  : boolean = true
 
-#@description Flag to activate the recording of any primary particle flag (sensitive detector "detector_SD")
-sensitive.detector_SD.record_primary_particle          : boolean = 1
+#@description Flag to activate the recording of any primary particle flag (sensitive detector "HPGe_SD")
+sensitive.HPGe_SD.record_primary_particle          : boolean = true
 
-#@description Flag to drop hits with zero energy deposit (sensitive detector "detector_SD")
-sensitive.detector_SD.drop_zero_energy_deposit_steps   : boolean = 0
+#@description Flag to drop hits with zero energy deposit (sensitive detector "HPGe_SD")
+sensitive.HPGe_SD.drop_zero_energy_deposit_steps   : boolean = false
 
-#@description Flag to track gamma particles (sensitive detector "detector_SD")
-sensitive.detector_SD.track_gamma                      : boolean = 1
+#@description Flag to track gamma particles (sensitive detector "HPGe_SD")
+sensitive.HPGe_SD.track_gamma                      : boolean = true
 
           ##########
           # Limits #
           ##########
 
 #@description List of geometry logical volumes with max steps:
-limits.list_of_volumes : string[2] = 		       "source.model.log" 		       "detector.model.log"
+limits.list_of_volumes : string[2] = "sample.model.log" "germanium_crystal.model.log"
 
-#@description Max step length inside source pad:
-limits.max_step.source.model.log         : real as length = 5 um
+#@description Max step length inside sample source:
+limits.max_step.sample.model.log         : real as length = 100 um
 
-#@description Max step length inside scintillator block:
-limits.max_step.detector_block.model.log : real as length = 100 um
+#@description Max step length inside germanium crystal:
+limits.max_step.germanium_crystal.model.log : real as length = 250 um
 
           ###########
           # Regions #
           ###########
 
+#@description Activation of regions
+using_regions : boolean = true
+
 #@description List of regions
-regions : string[2] = "detector" "source"
+regions.names : string[2] = "Detector" "Sample"
 
-#@description List of attached volumes/models for region "detector"
-regions.detector.volumes : string[1] = "detector.model.log"
+#@description List of attached volumes/models for region "Detector"
+regions.Detector.volumes : string[1] = "germanium_crystal.model.log"
 
-#@description List of attached volumes/models for region "source"
-regions.source.volumes   : string[1] = "source.model.log"
+#@description List of attached volumes/models for region "Sample" (sample box set)
+regions.Sample.volumes   : string[2] = "sample.model.log" "sample_box.model.log"
 
 ################
 # PHYSICS LIST #
@@ -153,45 +165,45 @@ logging.priority : string = "debug"
           # Geant4 physics list #
           #######################
 
-#@description List of physics constructors
-#geant4.physics_list : string = "LBE"
+# #@description List of physics constructors
+# geant4.physics_list : string = "LBE"
 
           ###############################
           # Physics constructor plugins #
           ###############################
 
 #@description List of physics constructors
-physics_constructors.names : string[2] = "particles" "em"
+physics_constructors.names : string[2] = "Particles" "EM"
 
-#@description Class ID of the physics constructors named 'particles'
-physics_constructors.particles.id     : string = "mctools::g4::particles_physics_constructor"
+#@description Class ID of the physics constructors named 'Particles'
+physics_constructors.Particles.id     : string = "mctools::g4::particles_physics_constructor"
 
-#@description Configuration file of the physics constructors named 'particles'
-physics_constructors.particles.config : string as path = "@edwgentiane:config/gentiane/simulation/geant4_control/0.1/physics/particles.conf"
+#@description Configuration file of the physics constructors named 'Particles'
+physics_constructors.Particles.config : string as path = "@edwgentiane:config/gentiane/simulation/geant4_control/0.1/physics/particles.conf"
 
-#@description Class ID of the physics constructors named 'em'
-physics_constructors.em.id            : string = "mctools::g4::em_physics_constructor"
+#@description Class ID of the physics constructors named 'EM'
+physics_constructors.EM.id            : string = "mctools::g4::em_physics_constructor"
 
-#@description Configuration file of the physics constructors named 'em'
-physics_constructors.em.config        : string as path = "@edwgentiane:config/gentiane/simulation/geant4_control/0.1/physics/em.conf"
+#@description Configuration file of the physics constructors named 'EM'
+physics_constructors.EM.config        : string as path = "@edwgentiane:config/gentiane/simulation/geant4_control/0.1/physics/em.conf"
 
           ##########################
           # Region production cuts #
           ##########################
 
-#@description The activation flag for regions' cuts
-using_production_cuts : boolean = 1
+#@description The activation flag for regions cuts
+using_production_cuts : boolean = true
 
 #@description The default length unit for region's cuts (default: mm)
 ### production_cuts.length_unit : string = "mm"
 
-#@description The default energy unit for region's cuts (default: MeV)
+### #@description The default energy unit for region's cuts (default: MeV)
 ### production_cuts.energy_unit : string = "MeV"
 
-#@description The energy high edge for cuts
+### #@description The energy high edge for cuts
 ### production_cuts.low_energy : real as energy = 1000 eV
 
-#@description The energy low edge for cuts
+### #@description The energy low edge for cuts
 ### production_cuts.high_energy : real as energy = 1 TeV
 
 #@description The production cut default value
@@ -209,17 +221,18 @@ production_cuts.positron : real as length = 1.0 mm
 #@description The production cut for proton
 production_cuts.proton : real as length = 1.0 mm
 
-#@description The list of regions with special production cuts
-# production_cuts.regions  : string [3] = "source" "detector" "lab"
+### #@description The list of regions with special production cuts
+### production_cuts.regions  : string [2] = "Sample" "Detector"
 
-#@description The electron cut value for region "source"
-# production_cuts.regions.source.electron       : real as length = 0.05 mm
+### #@description The electron cut value for region "Sample"
+### production_cuts.regions.Sample.electron       : real as length = 0.05 mm
 
-#@description The electron cut value for region "lab"
-# production_cuts.regions.lab.electron         : real as length = 0.5 mm
+### #@description The electron cut value for region "Detector"
+### production_cuts.regions.Detector.electron         : real as length = 0.5 mm
 
-#@description The gamma cut value for region "scintillator"
-# production_cuts.regions.detector.gamma : real as length = 5.0 mm
+### #@description The gamma cut value for region "Detector"
+### production_cuts.regions.Detector.gamma : real as length = 5.0 mm
+
 
 ##############
 # RUN ACTION #
@@ -232,37 +245,37 @@ production_cuts.proton : real as length = 1.0 mm
 logging.priority : string = "debug"
 
 #@description Event number print modulo
-number_events_modulo : integer = 1
+number_events_modulo : integer = 10
 
           #####################
           # Plain output file #
           #####################
 
-#@description Activate the storage of some meta data in a run header and footer
-### file.using_run_header_footer : boolean = 0
+### #@description Activate the storage of some metadata in a run header and footer (obsolete)
+### file.using_run_header_footer : boolean = false
 
 #@description If set, this flag triggers the generation of output files
-file.save : boolean = 1
+file.save : boolean = true
 
-#@description If set, this flag allows to overwrite an existing output files
-file.no_preserve : boolean = 1
+#@description If set, this flag allows to overwrite an existing output file
+file.no_preserve : boolean = false
 
-#@description The name of the output file
-#file.name : string as path = ""
+### #@description The name of the output file
+### file.name : string as path = ""
 
-#@description Path directory for output files
-# file.directory : string = "."
+### #@description Path directory for output files
+### file.directory : string = "."
 
 #@description Format of the output files ("xml", "binary", "ascii", "brio")
 # file.format : string = "brio"
 # file.format : string = "ascii"
 file.format : string = "xml"
 
-#@description Compression mode of the output files ("none", "gzip", "bzip2"; not for the "brio" format)
-# file.compression : string = "gzip"
+### #@description Compression mode of the output files ("none", "gzip", "bzip2"; not for the "brio" format)
+### file.compression : string = "gzip"
 
-#@description Prefix of the output files' name
-file.prefix : string = "mctools_ex00_"
+#@description Prefix of the output files name
+file.prefix : string = "edw-gentiane-sim_"
 
 ################
 # EVENT ACTION #
@@ -318,12 +331,14 @@ logging.priority : string = "warning"
           # Kill secondary particles #
           ############################
 
-#@description Activate the killing of secondary particles within some volumes
-# kill_particles : boolean = 0
+### #@description Activate the killing of secondary particles within some volumes
+### kill_particles : boolean = 0
 
-#@description Kill secondary particles within some given volumes
-# kill_particles.volumes : string[1] = "detector.model.log"
+### #@description Kill secondary particles within some given volumes
+### kill_particles.volumes : string[1] = "foo.model.log"
 
-#@description Kill secondary particles within some given materials
-# kill_particles.materials : string[1] = "detector_material"
+### #@description Kill secondary particles within some given materials
+### kill_particles.materials : string[1] = "lead"
 
+# end of manager.conf
+ 
