--- a/resources/config/gentiane/simulation/geant4_control/0.1/physics/em.conf
+++ b/resources/config/gentiane/simulation/geant4_control/0.1/physics/em.conf
@@ -107,36 +107,36 @@
 ### 
 ### #@description The name of the regions with special parameters for deexcitation processes
 ### em.deexcitation.regions : string[2] = \
-###  "token0" \
-###  "token1"
+###  "Detector" \
+###  "Sample"
 ### 
 
 ### 
 ### #@description Flag to activate fluorecence in some given region
-### em.deexcitation.regions.token0.fluorescence : boolean = 0
+### em.deexcitation.regions.Detector.fluorescence : boolean = 0
 ### 
 
 ### 
 ### #@description Flag to activate fluorecence in some given region
-### em.deexcitation.regions.token1.fluorescence : boolean = 0
+### em.deexcitation.regions.Sample.fluorescence : boolean = 0
 ### 
 
 ### 
 ### #@description Flag to activate Auger effect in some given region
-### em.deexcitation.regions.token0.auger : boolean = 0
+### em.deexcitation.regions.Detector.auger : boolean = 0
 ### 
 
 ### 
 ### #@description Flag to activate Auger effect in some given region
-### em.deexcitation.regions.token1.auger : boolean = 0
+### em.deexcitation.regions.Sample.auger : boolean = 0
 ### 
 
 ### 
 ### #@description Flag to activate PIXE effect in some given region
-### em.deexcitation.regions.token0.pixe : boolean = 0
+### em.deexcitation.regions.Detector.pixe : boolean = 0
 ### 
 
 ### 
 ### #@description Flag to activate PIXE effect in some given region
-### em.deexcitation.regions.token1.pixe : boolean = 0
+### em.deexcitation.regions.Sample.pixe : boolean = 0
 ### 
