--- a/resources/config/gentiane/simulation/vertexes/0.1/manager.conf
+++ b/resources/config/gentiane/simulation/vertexes/0.1/manager.conf
@@ -14,12 +14,13 @@
 # example mini-projects in : "$(bxquery --exampledir)/genvtx"
 
 #@description List of files containing the definition of the vertex generators usable in the simulation
-vg_list : string[5] as path = \
+vg_list : string[6] as path = \
   "@edwgentiane:config/gentiane/simulation/vertexes/0.1/generators/basic_generators.def" \
   "@edwgentiane:config/gentiane/simulation/vertexes/0.1/generators/Shielding/external_copper_generators.def" \
   "@edwgentiane:config/gentiane/simulation/vertexes/0.1/generators/Shielding/internal_lead_generators.def" \
   "@edwgentiane:config/gentiane/simulation/vertexes/0.1/generators/Environment/lab_generators.def" \
-  "@edwgentiane:config/gentiane/simulation/vertexes/0.1/generators/Detector/detector_generators.def"
+  "@edwgentiane:config/gentiane/simulation/vertexes/0.1/generators/Detector/detector_generators.def" \
+  "@edwgentiane:config/gentiane/simulation/vertexes/0.1/generators/Sample/sample_generators.def"
 
 ### #@description Default generator name (from the list(s) above)
 ### generator : string = "basic.center.vg"
